# service-de-webhook

./: .dockerignore  .env.example  .env.template  .gitignore  .vercelignore  Dockerfile  README.md  buildspec-app-runner.yml  buildspec-lambda.yml  check_app.py  check_event.py  check_event_by_key.py  check_sub_link.py  diagnose_event.py  docker-compose.yml  entrypoint.sh  final_verify.py  full_token.txt  gen_token.py  list_all_subs.py  list_links.py  list_subs.py  main.py  prepare-for-lambda.sh  pyproject.toml  requirements.txt  run_final_test.py  run_test_url_logging.py  run_user_curl.py  run_user_curl_v2.py  scaffold.py  search_logs.py  search_logs_py.py  search_logs_v2.py  sonar-project.properties  template.yml  tmp_db_query.py  tmp_get_client_id.py  update_test_sub.py  vercel.json
.github/workflows/: semgrep.yml  sonarqube.yml
alembic/: env.py
alembic/versions/: 0f98a0ba4dac_add_target_app_id_to_events.py  6247453db0da_add_invitations_table.py  c42344d91d7e_create_countries_table.py  e3555e03f229_initial_schema.py  e815f607a436_make_delivery_signature_nullable.py
app/: main.py
app/common/: auth.py  crypto.py  db.py  email.py  exception_handler.py  middleware.py  moment.py  queue.py  redis.py  responses.py  security.py
app/config/: database.py  settings.py
app/core/: circuit_breaker.py
app/models/: __init__.py  application.py  audit_log.py  delivery.py  event.py  invitation.py  refresh_token.py  subscriber.py  tenant.py  user.py
app/workers/: __main__.py  dispatcher.py  refresh_stats.py  retry_worker.py  settings.py
scripts/: seed.py
(+33 files in other folders)
